--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="menu">
         <img src="im11.jpg">
-        <a href="vaikea_cite.html"> Главная</a>
+        <a href="index.html"> Главная</a>
         <a href="works.html" class="m">Работы студентов</a>
         <a href="works.html" class="m">О нас</a>
     </div>
