--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="menu">
-        <a href="vaikea_cite.html"> Главная</a>
+        <a href="index.html"> Главная</a>
         <a href="works.html" class="m">Работы студентов</a>
         <a href="works.html" class="m">О нас</a>
     </div>
