--- a/index3.html
+++ b/index3.html
@@ -8,8 +8,8 @@
 <body>
     <div class="menu">
         <a href="index.html"> Главная</a>
-        <a href="works.html" class="m">Работы студентов</a>
-        <a href="works.html" class="m">О нас</a>
+        <a href="index3.html" class="m">Работы студентов</a>
+        <a href="index3.html" class="m">О нас</a>
     </div>
     <h1>Мне лень делать:)</h1>
 </body>
