--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="big">
             <img class="bigim" src="im1.jpeg">
             <h1 class="td">Новый курс 3D моделирования</h1>
-            <a href="zaw.html"><button class="bu">Подать заявку</button></a>
+            <a href="index4.html"><button class="bu">Подать заявку</button></a>
         </div>
         <div class="course">
             <h1>Курсы</h1>
@@ -27,25 +27,25 @@
                 <h2>Живопись</h2>
                 <img class="smalim" src="im5.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index.html"><button class="bb">Подать заявку</button></a>
             </div>
             <div class="sm">
                 <h2>Дизайн персонажей</h2>
                 <img class="smalim" src="im4.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index4.html"><button class="bb">Подать заявку</button></a>
             </div>
              <div class="sm">
                 <h2>Академический рисунок</h2>
                 <img class="smalim" src="im2.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index4.html"><button class="bb">Подать заявку</button></a>
             </div>
              <div class="sm">
                 <h2>Человеческое тело</h2>
                 <img class="smalim" src="im01.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index4.html"><button class="bb">Подать заявку</button></a>
             </div>
         </div>
          <div class="small2">
@@ -53,25 +53,25 @@
                 <h2>Векторная графика</h2>
                 <img class="smalim" src="im6.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index4.html"><button class="bb">Подать заявку</button></a>
             </div>
             <div class="sm">
                 <h2>Абстракция</h2>
                 <img class="smalim" src="im7.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index4.html"><button class="bb">Подать заявку</button></a>
             </div>
              <div class="sm">
                 <h2>Photoshop</h2>
                 <img class="smalim" src="im8.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index.html"><button class="bb">Подать заявку</button></a>
             </div>
              <div class="sm">
                 <h2>Фотография</h2>
                 <img class="smalim" src="im9.jpg">
                 <br>
-                <a href="zaw.html"><button class="bb">Подать заявку</button></a>
+                <a href="index4.html"><button class="bb">Подать заявку</button></a>
             </div>
         </div>
         <div class="footer">
