--- a/index4.html
+++ b/index4.html
@@ -18,6 +18,6 @@
             <br><br>
         </form>
     </div>
-    <a href="ttt.html"><button>Подать заявку</button></a>
+    <a href="index2.html"><button>Подать заявку</button></a>
 </body>
 </html>
