--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </div>
         <div class="footer">
             <br><br><br>
-            <p>Адресс</p>
-            <p>о нас</p>
+            <p>Адрес</p>
+            <p>О нас</p>
             <p>Предложения</p>
             <p>Жалобы</p>
         </div>
